--- a/index.html
+++ b/index.html
@@ -11,7 +11,26 @@
 </head>
 
 <body>
+    <div id="root"></div>
+
+
+
+
+
+
+
+
+
 
 </body>
+<script>
+    // pure js
+    const root = document.querySelector('#root')
+    const element = document.createElement('div')
+    element.innerHTML = 'hey there'
+    root.append(element)
+
+
+</script>
 
 </html>
